--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="AI Cyclist - Intelligent Training Assistant for cyclists. AI-powered training plans, workout generation, and performance analysis with Garmin Connect and Strava integration.">
     <title>AI Cyclist - Intelligent Training Assistant</title>
+    <link rel="icon" type="image/png" href="/logo-icon.png">
     <link rel="icon" type="image/svg+xml" href="/logo-icon.svg">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -12,7 +13,7 @@
     <header class="header">
         <div class="container">
             <div class="header-content">
-                <img src="logo.svg" alt="AI Cyclist" class="logo">
+                <img src="logo.png" alt="AI Cyclist" class="logo" onerror="this.onerror=null; this.src='logo.svg';">
                 <nav class="nav">
                     <a href="#features">Features</a>
                     <a href="#about">About</a>
@@ -109,7 +110,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <img src="logo-icon.svg" alt="AI Cyclist" class="footer-logo">
+                    <img src="logo-icon.png" alt="AI Cyclist" class="footer-logo" onerror="this.onerror=null; this.src='logo-icon.svg';">
                     <p>AI Cyclist - Intelligent Training Assistant</p>
                 </div>
                 <div class="footer-section">
