--- a/terms.html
+++ b/terms.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Terms of Service for AI Cyclist - Intelligent Training Assistant">
     <title>Terms of Service - AI Cyclist</title>
+    <link rel="icon" type="image/png" href="/logo-icon.png">
     <link rel="icon" type="image/svg+xml" href="/logo-icon.svg">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -12,7 +13,7 @@
     <header class="header">
         <div class="container">
             <div class="header-content">
-                <a href="index.html"><img src="logo.svg" alt="AI Cyclist" class="logo"></a>
+                <a href="index.html"><img src="logo.png" alt="AI Cyclist" class="logo" onerror="this.onerror=null; this.src='logo.svg';"></a>
                 <nav class="nav">
                     <a href="index.html">Home</a>
                     <a href="terms.html" class="active">Terms</a>
@@ -122,7 +123,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <img src="logo-icon.svg" alt="AI Cyclist" class="footer-logo">
+                    <img src="logo-icon.png" alt="AI Cyclist" class="footer-logo" onerror="this.onerror=null; this.src='logo-icon.svg';">
                     <p>AI Cyclist - Intelligent Training Assistant</p>
                 </div>
                 <div class="footer-section">
